# flask_movie_api

./: .coverage  .dockerignore  .gitignore  LICENSE  README.md  compose.dev.yml  compose.prod.yml  compose.test.yml  config.py  pyproject.toml  pytest.ini  wsgi.py
.github/workflows/: tests_docker.yml  tests_vm.yml
conf.d/: nginx.conf
data/: db.sqlite3
docker/: Dockerfile.dev  Dockerfile.prod  Dockerfile.test  entrypoint.dev.sh  entrypoint.prod.sh
migrations/versions/: 10fbe01406cf_add_user_model.py  98d6f5eabd51_add_movies_actors_model.py  d9a2cf8876fd_add_film_model.py  f5c49f81ba09_add_actor_model.py
sets/: del_env.sh  set_env.sh
sets/secrets/: secret_key.txt
src/: __init__.py
src/models/: __init__.py  _inserts.py  _queries.py  actor.py  film.py  films_actors.py  user.py
src/resources/: __init__.py  actors.py  aggregations.py  auth.py  films.py  populate_db.py  smoke.py
src/schemas/: __init__.py  actors.py  films.py  users.py
src/services/: __init__.py  actor_service.py  film_service.py
src/static/: actorfilmswagger.json
tests/: conftest.py  test_dev_actors.py  test_dev_films.py  test_memory_actors.py  test_memory_films.py  test_mock_actors.py  test_mock_films.py  test_smoke.py
tests/tests_files/: _populate_DB.py
